--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -224,6 +224,9 @@
     &:before {
       display: none;
     }
+    .section-title {
+      margin-bottom: 46px;
+    }
     .card-wrapper {
       .info-card {
         &.style-2 {
